# cpputil

./: AUTHORS  IDEAS  Makefile  Makefile.am  Makefile.in  acconfig.h.bak  acinclude.m4  aclocal.m4  autogen.sh  bootstrap  config.h  config.h.in  config.status  configure  configure.in  cpputil.pc  cpputil.pc.in  doxygen.config  libtool
autom4te.cache/: output.0  traces.0
cpputil/: Makefile  Makefile.am  Makefile.in  ansicolor.hh  benchmark.cc  byte.cc  byte.hh  cpputil.hh  factorial.hh  fdstream.hh  fmt.cc  fmt.hh  fs.hh  math.hh  mem_data.hh  opengl_display.cc  opengl_display.hh  rand.cc  rand.hh  rdb.cc  rdb.hh  re.hh  sequence.hh  singleton.hh  ss_cast.hh  str.cc  str.hh  t.cc  thread.hh  timer.hh  typelist.hh  types.hh  types.hh.in
cpputil/.deps/: byte.Plo  fmt.Plo  rand.Plo  rdb.Plo  str.Plo
examples/: Makefile  Makefile.am  Makefile.in  NOTES  foo.rdb  genstring.cc  randmax.cc  rdbtest.cc  scramble.cc  scramble.pl  sort.cc  sort.pl
examples/.deps/: genstring.Po  randmax.Po  rdbtest.Po  scramble.Po  sort.Po
test/: Makefile  Makefile.am  Makefile.in  ansicolor.cc  byte_unit.hh  cast_unit.hh  display.cc  exception.cc  fdout.cc  fmt_unit.hh  fstest.cc  mem_ref.cc  regex.cc  singleton_unit.hh  str_unit.hh  template_unit.hh  threads.cc  unit.cc
