AC_INIT(cpputil/cpputil.hh)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)

LIBRARY_NAME=cpputil

MAJOR_VERSION=0
MINOR_VERSION=1
MICRO_VERSION=0
LIBRARY_VERSION=0:1:0
AC_SUBST(LIBRARY_VERSION)

PACKAGE=$LIBRARY_NAME
AC_SUBST(LIBRARY_NAME)

VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION
RELEASE=$MAJOR_VERSION.$MINOR_VERSION

AC_SUBST(RELEASE)
AC_SUBST(VERSION)

dnl AC_DEFINE_UNQUOTED(MAJOR_VERSION, $MAJOR_VERSION)
dnl AC_DEFINE_UNQUOTED(MINOR_VERSION, $MINOR_VERSION)
dnl AC_DEFINE_UNQUOTED(MICRO_VERSION, $MICRO_VERSION)

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)

AC_PROG_CC
AC_PROG_CXX
AM_PROG_LIBTOOL
AM_SANITY_CHECK

AC_LANG_CPLUSPLUS

AC_C_BIGENDIAN

AC_CHECK_INTSIZES
AC_CHECK_SYBASE

AC_OUTPUT( Makefile \
           cpputil.pc \
	   cpputil/types.hh \
	   cpputil/Makefile \
	   examples/Makefile \
	   test/Makefile
)
