noinst_PROGRAMS = genstring scramble sort randmax rdbtest

genstring_SOURCES = genstring.cc
scramble_SOURCES = scramble.cc
sort_SOURCES = sort.cc
rdbtest_SOURCES = rdbtest.cc
randmax_SOURCES = randmax.cc

ldflags = $(top_srcdir)/$(LIBRARY_NAME)/lib$(LIBRARY_NAME).la
genstring_LDFLAGS = $(ldflags)
scramble_LDFLAGS = $(ldflags)
sort_LDFLAGS = $(ldflags)
randmax_LDFLAGS = $(ldflags)
rdbtest_LDFLAGS = $(ldflags)
